[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
[project]
name = "captcha_svlib"
version = "0.0.1"
authors = [
  { name="Rai Icasiano", email="ricasiano@gmail.com" },
]
description = "SV Captcha Library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/rai-streamline/captcha_svlib"
Issues = "https://github.com/rai-streamline/captcha_svlib/issues"
dependencies = [
    "2captcha-python>=1.5.1",
    "anticaptchaofficial>=1.0.64",
]
